# foxchain

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  README.md  bench_all_chains.rs  debug_test  test_classify  test_pk
crates/foxchain-id/: Cargo.toml  README.md
crates/foxchain-id/docs/: README.md  bitcoin-addresses.md  cosmos-addresses.md  onchain-examples.md  solana-addresses.md  substrate-addresses.md
crates/foxchain-id/metadata/: index.json
crates/foxchain-id/metadata/chains/: akash.json  base.json  bitcoin.json  celo.json  dogecoin.json  kava.json  kusama.json  polygon.json  regen.json  sentinel.json  substrate.json
crates/foxchain-id/metadata/curves/: ed25519.json
crates/foxchain-id/metadata/pipelines/addresses/: bitcoin_bech32.json  bitcoin_p2pkh.json  cardano.json  ss58.json
crates/foxchain-id/src/: identify.rs  lib.rs
crates/foxchain-id/src/address/: mod.rs
crates/foxchain-id/src/address/detection/: bitcoin.rs  cardano.rs  cosmos.rs  evm.rs  mod.rs  solana.rs  substrate.rs  tron.rs
crates/foxchain-id/src/detectors/: address.rs  mod.rs  public_key.rs
crates/foxchain-id/src/formats/: bitcoin.rs  cardano.rs  cosmos.rs  evm.rs  mod.rs  public_key.rs  solana.rs  substrate.rs  tron.rs
crates/foxchain-id/src/input/: characteristics.rs  classifier.rs  matcher.rs  mod.rs  signature.rs
crates/foxchain-id/src/loaders/: chain_loader.rs  curve_loader.rs  metadata_loader.rs  mod.rs  pipeline_loader.rs
crates/foxchain-id/src/models/: chain.rs  curve.rs  mod.rs  pipeline.rs
crates/foxchain-id/src/pipelines/: mod.rs
crates/foxchain-id/src/pipelines/addresses/: bitcoin_bech32.rs  bitcoin_p2pkh.rs  cardano.rs  cosmos.rs  dispatcher.rs  evm.rs  mod.rs  solana.rs  ss58.rs  tron.rs
crates/foxchain-id/src/public_key/: mod.rs
crates/foxchain-id/src/public_key/derivation/: bitcoin.rs  cardano.rs  cosmos.rs  evm.rs  mod.rs  solana.rs  substrate.rs  tron.rs
crates/foxchain-id/src/public_key/detection/: mod.rs
crates/foxchain-id/src/registry/: build.rs  chain_converter.rs  groups.rs  metadata.rs  mod.rs
crates/foxchain-id/src/shared/: mod.rs
crates/foxchain-id/src/shared/checksum/: base58check.rs  eip55.rs  mod.rs  ss58.rs
crates/foxchain-id/src/shared/crypto/: hash.rs  secp256k1.rs
crates/foxchain-id/src/shared/derivation/: ed25519.rs  mod.rs  sr25519.rs
crates/foxchain-id/src/shared/encoding/: base58.rs  bech32.rs  hex.rs  mod.rs  ss58.rs
crates/foxchain-id/src/shared/normalize/: case.rs
docs/: README.md  evm-addresses.md  examples.md  onchain-examples.md  (+3 more)
src/: lib.rs
(+114 files in other folders)
